# xdialog-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  renovate.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: convert.rs
examples/: info_cancel.rs  maccf_direct.rs  progress.rs  progress_buttons.rs  skia_bench.rs  todo.rs  unicode.rs  varied_sizes.rs  various_options.rs  various_sizes.rs  win32_direct.rs
examples/todo/: app.js
src/: builder.rs  channel.rs  errors.rs  lib.rs  maccf_direct.rs  message.rs  model.rs  pixels.rs  progress.rs  state.rs  webview.rs  win32_direct.rs
src/backends/: fltk.rs  fltk_button.rs  fltk_dialog.rs  fltk_fonts.rs  fltk_progress.rs  fltk_theme.rs  maccf_direct.rs  mod.rs  win32_direct.rs
src/backends/appkit/: appkit_dialog.rs  mod.rs
src/backends/fltk/: fltk_button.rs  fltk_dialog.rs  fltk_fonts.rs  fltk_progress.rs  fltk_theme.rs  mod.rs
src/backends/gtk3/: gtk_dialog.rs  mod.rs
src/backends/gtk4/: gtk_dialog.rs  mod.rs
src/backends/mshtml/: mod.rs  webview.rs
src/backends/native/: mod.rs  taskdialog.rs
src/backends/skia/: background.rs  button.rs  component.rs  desktop.rs  dialog.rs  font.rs  icon.rs  icons.rs  instrument.rs  label.rs  mod.rs  pixels.rs  progress.rs  renderer.rs  text.rs  theme.rs
src/backends/webview/: mod.rs
src/backends/win32/: backend.rs  mod.rs  taskdialog.rs
src/backends/xaml_island/: Mile.Xaml.Styles.SunValley.xaml  mod.rs
src/images/: mod.rs
src/sys/: mod.rs  taskdialog.rs  webview2.rs
src/sys/mshtml/: builder.rs  error.rs  mod.rs
src/sys/webview_mshtml/: builder.rs  color.rs  mod.rs  native.rs
tests/: headless_linux.rs  image_seed.sh  macos_ui.rs  message_silent.rs  message_timeout.rs  progress_close_twice.rs  progress_silent.rs  visual_regression.rs
tests/headless/: Cargo.toml  Cross.toml
tests/headless/src/: main.rs
webview-sys/: Cargo.toml  build.rs
