[package]
name = "xdialog"
version = "2.0.1"
edition = "2021"
license = "MIT"
description = "A small cross-platform native dialogs library."
authors = ["Caelan Sayler <git@caesay.com>"]
repository = "https://github.com/velopack/xdialog"
keywords = ["dialog", "message-box", "messagebox", "cross-platform"]
categories = ["graphics", "gui", "visualization"]

[features]
default = []
gtk = ["dep:gtk"]
fltk = ["dep:fltk"]
fltk-bundled = ["fltk", "fltk/fltk-bundled"]
fltk-wayland = ["fltk", "fltk/use-wayland"]
win32-direct = []
maccf-direct = ["dep:core-foundation", "dep:core-foundation-sys"]

[dependencies]
log = "0.4"
oneshot = { version = "0.2", features = ["std"] }
thiserror = "2.0"

# AppKit Backend
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSDate",
    "NSRunLoop",
    "NSObject",
    "NSDictionary",
    "NSAttributedString",
    "NSGeometry",
    "NSValue",
    "NSArray",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSTextField",
    "NSButton",
    "NSImageView",
    "NSImage",
    "NSProgressIndicator",
    "NSFont",
    "NSColor",
    "NSScreen",
    "NSEvent",
    "NSControl",
    "NSResponder",
    "NSCell",
    "NSButtonCell",
    "NSRunningApplication",
    "NSGraphics",
    "NSText",
    "NSPanel",
] }
block2 = "0.6"
core-foundation = { version = "0.10", optional = true }
core-foundation-sys = { version = "0.8", optional = true }

# GTK3 Backend (optional, enable with "gtk" feature)
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", optional = true }
# Skia backend (always available on Linux)
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.12"
fontdue = "0.9"
# Animation (used by both skia and fltk backends)
enum-map = "2.7"
mina = "0.1"
# FLTK backend (optional)
fltk = { version = "1.5", optional = true }

# Win32 Backend
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
widestring = "1.2"

[[example]]
name = "win32_direct"
required-features = ["win32-direct"]

[[example]]
name = "maccf_direct"
required-features = ["maccf-direct"]

[[test]]
name = "macos_ui"
harness = false

[[test]]
name = "visual_regression"
harness = false

[dev-dependencies]
ntest = "0.9"
image = "0.25"
xcap = "0.9"

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
