[package]
name = "xdialog"
version = "3.0.0"
edition = "2021"
license = "MIT"
description = "A small cross-platform native dialogs library."
authors = ["Caelan Sayler <git@caesay.com>"]
repository = "https://github.com/velopack/xdialog"
keywords = ["dialog", "message-box", "messagebox", "cross-platform"]
categories = ["graphics", "gui", "visualization"]

[features]
default = []
win32-direct = []
maccf-direct = ["dep:core-foundation", "dep:core-foundation-sys"]
# Opt-in per-frame render/present timing (plus process CPU/RSS sampling) for the skia backend.
# Pulls in `sysinfo` only when enabled — the default shipping crate is unaffected. Drives
# `examples/skia_bench.rs`.
skia-instrumentation = ["dep:sysinfo"]

[dependencies]
log = "0.4"
oneshot = { version = "0.2", features = ["std"] }
thiserror = "2.0"

# AppKit Backend
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSDate",
    "NSRunLoop",
    "NSObject",
    "NSDictionary",
    "NSAttributedString",
    "NSGeometry",
    "NSValue",
    "NSArray",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSWindow",
    "NSView",
    "NSTextField",
    "NSButton",
    "NSImageView",
    "NSImage",
    "NSProgressIndicator",
    "NSFont",
    "NSColor",
    "NSScreen",
    "NSEvent",
    "NSControl",
    "NSResponder",
    "NSCell",
    "NSButtonCell",
    "NSRunningApplication",
    "NSGraphics",
    "NSText",
    "NSPanel",
] }
block2 = "0.6"
core-foundation = { version = "0.10", optional = true }
core-foundation-sys = { version = "0.8", optional = true }

# Linux / Skia backend
[target.'cfg(target_os = "linux")'.dependencies]
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.12"
cosmic-text = "0.12"
enum-map = "2.7"
mina = "0.1"
multiversion = "0.8.0"
zbus = "5"
sysinfo = { version = "0.39", optional = true, default-features = false, features = ["system"] }

# Win32 Backend
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System",
    "Win32_Foundation",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }
widestring = "1.2"

[[example]]
name = "win32_direct"
required-features = ["win32-direct"]

[[example]]
name = "maccf_direct"
required-features = ["maccf-direct"]

[[example]]
name = "skia_bench"
required-features = ["skia-instrumentation"]

[[test]]
name = "macos_ui"
harness = false

[[test]]
name = "visual_regression"
harness = false

[[bench]]
name = "convert"
harness = false
required-features = ["skia-instrumentation"]

[dev-dependencies]
ntest = "=0.9.5"
image = "=0.25.10"
xcap = "=0.9.6"
criterion = { version = "=0.8.2", default-features = false, features = ["cargo_bench_support"] }

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "=0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
